force-app/main/default/objects/Lead/fields/Assign_to_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Account_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Assign Lead to account owner</description>
    <inlineHelpText>if Existing Account is populated and this box is checked then the lead owner becomes the existing account&apos;s owner.</inlineHelpText>
    <label>Assign Lead to Existing Account Owner</label>
    <type>Checkbox</type>
</CustomField>