force-app/main/default/objects/Lead/fields/Call_Center_Activity__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Activity__c</fullName>
    <label>Call Center Activity ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>