force-app/main/default/objects/Lead/fields/Campaign_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Identifier__c</fullName>
    <label>Campaign Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid Search Campaign - Industrial Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>