force-app/main/default/objects/Lead/fields/CH_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>CH_Queue_Id__c</fullName>
    <label>CH Queue Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>