force-app/main/default/objects/Lead/fields/CHES_District__c.field-meta.xml
<CustomField>
    <fullName>CHES_District__c</fullName>
    <formula>ZIP_Master_Lookup__r.CHES_District__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CHES District</label>
    <type>Text</type>
</CustomField>