force-app/main/default/objects/Lead/fields/CHES_Region__c.field-meta.xml
<CustomField>
    <fullName>CHES_Region__c</fullName>
    <formula>ZIP_Master_Lookup__r.CHES_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CHES Region</label>
    <type>Text</type>
</CustomField>