force-app/main/default/objects/Lead/fields/City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>City_State_Zip__c</fullName>
    <formula>City +&quot;, &quot;+ State +&quot;, &quot;+  PostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City State Zip</label>
    <type>Text</type>
</CustomField>