force-app/main/default/objects/Lead/fields/CLH_Website_Lead_is_not_Sales_Related__c.field-meta.xml
<CustomField>
    <fullName>CLH_Website_Lead_is_not_Sales_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check the box if the lead came in from the Clean Harbors website and it is not Sales Related.  It will get routed to a central team.</description>
    <inlineHelpText>Check the box if the lead came in from the Clean Harbors website and it is not Sales Related</inlineHelpText>
    <label>CLH Website Lead is not Sales Related</label>
    <type>Checkbox</type>
</CustomField>