force-app/main/default/objects/Lead/fields/CLH_Website_Lead_is_Small_Drum__c.field-meta.xml
<CustomField>
    <fullName>CLH_Website_Lead_is_Small_Drum__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lead should go to customer service</description>
    <inlineHelpText>Check this box and the lead will go to Central Customer Service for review</inlineHelpText>
    <label>CLH Website Lead is Small Drum</label>
    <type>Checkbox</type>
</CustomField>