force-app/main/default/objects/Lead/fields/CLH_Website_Lead_Recipient_2__c.field-meta.xml
<CustomField>
    <fullName>CLH_Website_Lead_Recipient_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CLH Website Lead Recipient 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads4</relationshipName>
    <type>Lookup</type>
</CustomField>