force-app/main/default/objects/Lead/fields/CLH_Website_Send_Lead_to_Territory_Owner__c.field-meta.xml
<CustomField>
    <fullName>CLH_Website_Send_Lead_to_Territory_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CLH Website Send Lead to Territory Owner</label>
    <type>Checkbox</type>
</CustomField>