force-app/main/default/objects/Lead/fields/CLH_Website_Service_Requested__c.field-meta.xml
<CustomField>
    <fullName>CLH_Website_Service_Requested__c</fullName>
    <label>CLH Website Service Requested</label>
    <length>100</length>
    <type>Text</type>
</CustomField>