force-app/main/default/objects/Lead/fields/Competitor_Contract_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Contract_Term_Months__c</fullName>
    <description>Current / Existing Competitor Contract Term in Months</description>
    <inlineHelpText>Current / Existing Competitor Contract Term in Months</inlineHelpText>
    <label>Competitor Contract Term (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>