force-app/main/default/objects/Lead/fields/Competitor_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Contract_Type__c</fullName>
    <description>Existing Competitor contract type</description>
    <label>Competitor Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day Rate</fullName>
            </value>
            <value>
                <fullName>Monthly Rate</fullName>
            </value>
            <value>
                <fullName>Man-Hour/Head Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>