force-app/main/default/objects/Lead/fields/Contract_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Due_Date__c</fullName>
    <description>Lead has an existing contract with a competitor that ends on this day.</description>
    <inlineHelpText>Lead has an existing contract with a competitor that ends on this day.</inlineHelpText>
    <label>Competitor Contract End Date</label>
    <type>Date</type>
</CustomField>