force-app/main/default/objects/Lead/fields/Created_by_Me__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Me__c</fullName>
    <formula>IF(CreatedById = $User.Id , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Me</label>
    <type>Checkbox</type>
</CustomField>