force-app/main/default/objects/Lead/fields/Created_by_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Role__c</fullName>
    <description>Created by Role Name</description>
    <formula>CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Role</label>
    <type>Text</type>
</CustomField>