force-app/main/default/objects/Lead/fields/Created_Date_with_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_with_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date with Time</label>
    <type>DateTime</type>
</CustomField>