force-app/main/default/objects/Lead/fields/Current_Contract__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Competitor Contract</label>
    <type>Checkbox</type>
</CustomField>