force-app/main/default/objects/Lead/fields/Current_rates__c.field-meta.xml
<CustomField>
    <fullName>Current_rates__c</fullName>
    <description>Current rate they are paying for lodging</description>
    <label>Competitor Contract Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>