force-app/main/default/objects/Lead/fields/Data_Loader_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Data_Loader_Identifier__c</fullName>
    <label>Data Loader Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>