force-app/main/default/objects/Lead/fields/Days_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Contact__c</fullName>
    <formula>First_Contact_Date__c -  datevalue(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>