force-app/main/default/objects/Lead/fields/ddm__EngagementScore__c.field-meta.xml
<CustomField>
    <fullName>ddm__EngagementScore__c</fullName>
    <description>The engagement component score for this lead</description>
    <inlineHelpText>The engagement component score for this lead</inlineHelpText>
    <label>Engagement Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>