force-app/main/default/objects/Lead/fields/ddm__SuitabilityScore__c.field-meta.xml
<CustomField>
    <fullName>ddm__SuitabilityScore__c</fullName>
    <description>The suitability component score for this lead</description>
    <inlineHelpText>The suitability component score for this lead</inlineHelpText>
    <label>Suitability Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>