force-app/main/default/objects/Lead/fields/DL_Bulk_leads__c.field-meta.xml
<CustomField>
    <fullName>DL_Bulk_leads__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when leads are loaded in bulk through data loader</description>
    <label>DL Bulk leads</label>
    <type>Checkbox</type>
</CustomField>