force-app/main/default/objects/Lead/fields/DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number__c</fullName>
    <description>Dun and Bradstreet DUNS number</description>
    <label>DUNS Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>