force-app/main/default/objects/Lead/fields/EPA_ID__c.field-meta.xml
<CustomField>
    <fullName>EPA_ID__c</fullName>
    <label>EPA ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>