force-app/main/default/objects/Lead/fields/Existing_Account__c.field-meta.xml
<CustomField>
    <fullName>Existing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is to identify leads on existing accounts</description>
    <inlineHelpText>Use this field to enter an account you know already exists.  It will use the existing account information to update the Business Type, Rank, and company name fields.</inlineHelpText>
    <label>Existing Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Branch, Chain, Competitor, Corporate, Growth Budget</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>