force-app/main/default/objects/Lead/fields/Existing_Account_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Existing_Account_ID_18__c</fullName>
    <formula>Existing_Account__r.Account_ID_18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing Account ID 18</label>
    <type>Text</type>
</CustomField>