force-app/main/default/objects/Lead/fields/Existing_Account_Lead__c.field-meta.xml
<CustomField>
    <fullName>Existing_Account_Lead__c</fullName>
    <formula>not(isblank(  Existing_Account__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing Account Lead</label>
    <type>Checkbox</type>
</CustomField>