force-app/main/default/objects/Lead/fields/First_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Date__c</fullName>
    <description>Date First Contacted Date or marked qualified/disqualifed</description>
    <label>Lead Close Date</label>
    <type>Date</type>
</CustomField>