force-app/main/default/objects/Lead/fields/Generator_Status__c.field-meta.xml
<CustomField>
    <fullName>Generator_Status__c</fullName>
    <label>Generator Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Large Quantity Generator</fullName>
            </value>
            <value>
                <fullName>Small Quantity Generator</fullName>
            </value>
            <value>
                <fullName>Conditionally Exempt Sm Qty Generator</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>