force-app/main/default/objects/Lead/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <description>Practice Group Name(Healthcare)</description>
    <label>Group Name</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>