force-app/main/default/objects/Lead/fields/Healthcare_Lead_Classification__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Lead_Classification__c</fullName>
    <description>This field is used to identify the customer classification for Heathcare.  Request from reps so filtering can be done on the lead.</description>
    <label>Healthcare Lead Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accupuncture</fullName>
            </value>
            <value>
                <fullName>Allergists</fullName>
            </value>
            <value>
                <fullName>Alzheimers&apos;/Senior Citizens</fullName>
            </value>
            <value>
                <fullName>Ambulance Companies</fullName>
            </value>
            <value>
                <fullName>Ambulatory</fullName>
            </value>
            <value>
                <fullName>Biotech Firms</fullName>
            </value>
            <value>
                <fullName>Blood Banks</fullName>
            </value>
            <value>
                <fullName>Chriopractor</fullName>
            </value>
            <value>
                <fullName>Convalescent Homes</fullName>
            </value>
            <value>
                <fullName>Crime Scene</fullName>
            </value>
            <value>
                <fullName>Dental Labs</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Dialysis</fullName>
            </value>
            <value>
                <fullName>Doctors with Misc. Specialties</fullName>
            </value>
            <value>
                <fullName>Ear Nose and Throat - ENT</fullName>
            </value>
            <value>
                <fullName>Educational Services</fullName>
            </value>
            <value>
                <fullName>Family Practice</fullName>
            </value>
            <value>
                <fullName>Fire Stations</fullName>
            </value>
            <value>
                <fullName>Funeral Homes</fullName>
            </value>
            <value>
                <fullName>Government Entity</fullName>
            </value>
            <value>
                <fullName>Health Clinics</fullName>
            </value>
            <value>
                <fullName>Health Departments &amp; Services</fullName>
            </value>
            <value>
                <fullName>Home Health Care</fullName>
            </value>
            <value>
                <fullName>Hospices</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Hotels</fullName>
            </value>
            <value>
                <fullName>Independent Living</fullName>
            </value>
            <value>
                <fullName>Labs - Medical</fullName>
            </value>
            <value>
                <fullName>Labs - Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>