force-app/main/default/objects/Lead/fields/Industry_Segment__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment__c</fullName>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Base &amp; Blended Oils</fullName>
            </value>
            <value>
                <fullName>Brokers</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Ecommerce</fullName>
            </value>
            <value>
                <fullName>Education Services</fullName>
            </value>
            <value>
                <fullName>Engineering &amp; Consulting</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Healthcare Services</fullName>
            </value>
            <value>
                <fullName>Insurance &amp; Real Estate</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paper &amp; Wood</fullName>
            </value>
            <value>
                <fullName>Pharmaceutical &amp; Biotechnology</fullName>
            </value>
            <value>
                <fullName>Refineries &amp; Oilsands</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Terminals &amp; Pipelines</fullName>
            </value>
            <value>
                <fullName>Transportation Services</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>