force-app/main/default/objects/Lead/fields/Is_a_call_center_lead__c.field-meta.xml
<CustomField>
    <fullName>Is_a_call_center_lead__c</fullName>
    <formula>AND(OR(CreatedBy.Profile.Name=&apos;Call Center Agent&apos;,
CreatedBy.Profile.Name=&apos;Call Center Agent New&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is a call center lead?</label>
    <type>Checkbox</type>
</CustomField>