force-app/main/default/objects/Lead/fields/Is_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Is_Assigned__c</fullName>
    <formula>BEGINS(OwnerId , &quot;00G&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Assigned</label>
    <type>Checkbox</type>
</CustomField>