force-app/main/default/objects/Lead/fields/Is_Changed__c.field-meta.xml
<CustomField>
    <fullName>Is_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if Lead Status is Change</description>
    <label>Is Changed</label>
    <type>Checkbox</type>
</CustomField>