force-app/main/default/objects/Lead/fields/Lead_Address__c.field-meta.xml
<CustomField>
    <fullName>Lead_Address__c</fullName>
    <formula>Street +&quot;, &quot;+ City +&quot;, &quot;+ State +&quot;, &quot;+  PostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Address</label>
    <type>Text</type>
</CustomField>