force-app/main/default/objects/Lead/fields/Lead_Branch__c.field-meta.xml
<CustomField>
    <fullName>Lead_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Branch record</description>
    <inlineHelpText>Enter branch to include in the Branch&apos;s lead queue.  Leave blank if this is a sales lead that should not be seen by the branch.</inlineHelpText>
    <label>Lead Branch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Branch</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Lead Branch)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>