force-app/main/default/objects/Lead/fields/Lead_Branch_Area__c.field-meta.xml
<CustomField>
    <fullName>Lead_Branch_Area__c</fullName>
    <description>Lead Branch Description 7</description>
    <formula>Lead_Branch__r.branch_descr_amt7__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Branch Area</label>
    <type>Text</type>
</CustomField>