force-app/main/default/objects/Lead/fields/Lead_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Lead_Branch_Code__c</fullName>
    <formula>Lead_Branch__r.Branch_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Branch Code</label>
    <type>Text</type>
</CustomField>