force-app/main/default/objects/Lead/fields/Lead_Classification__c.field-meta.xml
<CustomField>
    <fullName>Lead_Classification__c</fullName>
    <description>If a potential new customer pick New Lead, If existing customer pick Cross Sell</description>
    <label>Lead Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Lead</fullName>
                <default>true</default>
                <label>New Lead</label>
            </value>
            <value>
                <fullName>Cross Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>