force-app/main/default/objects/Lead/fields/Lead_Closed__c.field-meta.xml
<CustomField>
    <fullName>Lead_Closed__c</fullName>
    <formula>not(isblank( First_Contact_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Closed</label>
    <type>Checkbox</type>
</CustomField>