force-app/main/default/objects/Lead/fields/Lead_Closed_in_72_hrs__c.field-meta.xml
<CustomField>
    <fullName>Lead_Closed_in_72_hrs__c</fullName>
    <formula>If(
(First_Contact_Date__c - DB_Created_Date_without_Time__c) &gt; 3, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Closed in 72 hrs</label>
    <type>Checkbox</type>
</CustomField>