force-app/main/default/objects/Lead/fields/Lead_First_Contact_Age__c.field-meta.xml
<CustomField>
    <fullName>Lead_First_Contact_Age__c</fullName>
    <description>Time difference between the lead created date and lead status changes to contacted / qualified / unqualified from open status. The age is in business hours by considering 5 days a week and 8 hours in a day for EST timezone.</description>
    <formula>ROUND( 8 * (
( 5 * FLOOR( ( DATEVALUE(Lead_First_Contact_Date__c) - DATE( 1900, 1, 8) ) /7) +
MIN(5,
MOD( DATEVALUE(Lead_First_Contact_Date__c)- DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 8 * ( MOD(Lead_First_Contact_Date__c - DATETIMEVALUE( &apos;1900-01-08 13:00:00&apos; ), 1 ) ) )
))
-
( 5 * FLOOR( ( DATEVALUE( Created_Date_Backend__c) - DATE( 1900, 1, 8) ) /7) +
MIN( 5,
MOD( DATEVALUE( Created_Date_Backend__c) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 8 * ( MOD( Created_Date_Backend__c - DATETIMEVALUE( &apos;1900-01-08 13:00:00&apos; ), 1) ) )
))
),0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Contact Age (Business Hours EST)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>