force-app/main/default/objects/Lead/fields/Lead_First_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_First_Contact_Date__c</fullName>
    <description>Datetime when the lead status changes from open to contacted, qualified, unqualified</description>
    <label>Lead First Contact Date</label>
    <type>DateTime</type>
</CustomField>