force-app/main/default/objects/Lead/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <formula>caseSAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead ID(18)</label>
    <type>Text</type>
</CustomField>