force-app/main/default/objects/Lead/fields/Lead_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Manager_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Lead manager ID</description>
    <label>Lead Manager ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>