force-app/main/default/objects/Lead/fields/Lead_Manager_ID_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Lead_Manager_ID_Lookup__c</fullName>
    <formula>Owner:User.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Manager ID Lookup</label>
    <type>Text</type>
</CustomField>