force-app/main/default/objects/Lead/fields/Lead_owner_changed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_owner_changed_Date_Time__c</fullName>
    <description>Stamps the date/time when lead owner changes</description>
    <label>Lead owner changed (Date/Time)</label>
    <type>DateTime</type>
</CustomField>