force-app/main/default/objects/Lead/fields/Lead_Owner_First_Response_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_First_Response_Date_Time__c</fullName>
    <label>Lead Owner First Response (Date/Time)</label>
    <type>DateTime</type>
</CustomField>